Actually fix scrolling summaries, fix armor display
Armor display was not showing correctly at all. Fixed.

--- a/scss/cyberpunk.scss
+++ b/scss/cyberpunk.scss
@@ -30,10 +30,6 @@ $field-border-width: 2px;
         border-width: 0px;
         background-color: $inactive-colour;
     }
-
-    .summary {
-        overflow-x: auto;
-    }
 }
 
 /* Overall sheet structure */
